--- a/app/views/tasks/home.html.erb
+++ b/app/views/tasks/home.html.erb
@@ -4,17 +4,21 @@
   {{ 1 + 1 + 1}}
 
   <div ng-controller="taskCtrl">
-  
-    <h4>Edit line above</h4>
-    <input ng-model="rake"> 
     
-    <ul>
-      <li ng-repeat="task in tasks"> {{ task }}<input ng-model="task"></li>
+    <ul> 
+      <li ng-repeat="task in tasks"
+      ng-click="toggleComplete(task)" ng-class="{completed : task.completed}"> {{ task.task }}</li>
     </ul>
 
     <h4>Add a task</h4>
-    <input ng-model="addTask">
+    <input ng-model="newTask">
     <button ng-click="addTask(newTask)">Add Task</button>
+
+
+
+    <h4>Delete a task</h4>
+    <input ng-model="deleteTask">
+    <button ng-click="">Delete Task</button>
 
   </div>
 </div>
